Added systray entry with new programmer-art icon and associated menu. Will need complete refactor to complete systray hiding. Issue #1

--- a/kioskControlPanel/kioskControlPanel.csproj
+++ b/kioskControlPanel/kioskControlPanel.csproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <Content Include="alpha-screenshot.png" />
     <Content Include="coin in.mp3" />
+    <Content Include="kcp.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
