--- a/kioskControlPanel/kioskControlPanel.csproj
+++ b/kioskControlPanel/kioskControlPanel.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="alpha-screenshot.png" />
+    <Content Include="beta-screenshot.png" />
     <Content Include="coin in.mp3" />
     <Content Include="kcp.ico" />
   </ItemGroup>
