--- a/kioskControlPanel/kioskControlPanel.csproj
+++ b/kioskControlPanel/kioskControlPanel.csproj
@@ -32,6 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,6 +45,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsInput">
+      <HintPath>E:\Code\inputsimulator\WindowsInput\bin\Debug\WindowsInput.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="frmCpl.cs">
@@ -55,6 +61,8 @@
     <Compile Include="INI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendRawInput.cs" />
+    <Compile Include="Win32SendInput.cs" />
     <EmbeddedResource Include="frmCpl.resx">
       <DependentUpon>frmCpl.cs</DependentUpon>
     </EmbeddedResource>
@@ -97,5 +105,6 @@
     <Content Include="coin in.mp3" />
     <Content Include="kcp.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
