Added file picker buttons for sound effects but having problems with WMPLib. Looking for alternatives.

--- a/kioskControlPanel/kioskControlPanel.csproj
+++ b/kioskControlPanel/kioskControlPanel.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -104,6 +105,7 @@
     <Content Include="beta-screenshot.png" />
     <Content Include="coin in.mp3" />
     <Content Include="kcp.ico" />
+    <None Include="Resources\speaker_16.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
